--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,6 @@
         <version>3.3.2</version>
       </plugin>
     </plugins>
-    <finalName>devops</finalName>
+    <finalName>rbjunkin</finalName>
   </build>
 </project>
